--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokemon-me",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Returns random ASCII pokemon",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "fs": "0.0.1-security",
-    "path": "^0.12.7",
-    "yargs": "17.7.2"
+    "path": "0.12.7"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/deepakchethan/pokemon-me/issues"
+  },
+  "bin": {
+    "pokemonMe": "cmd.js"
   },
   "homepage": "https://github.com/deepakchethan/pokemon-me#readme"
 }
